--- a/html css js code/javascript/popup slider.html
+++ b/html css js code/javascript/popup slider.html
@@ -74,11 +74,57 @@ img.image-organic-milk {
 
 
 /* end organic milk */
+
+
+.marquee {
+  width: 100%; /* Full width */
+  overflow: hidden;
+  white-space: nowrap; /* Prevent line breaks */
+  box-sizing: border-box;
+}
+
+.marquee-images {
+  display: inline-block;
+  padding-left: 100%; /* Start from off-screen */
+  animation: marquee 15s linear infinite; /* Infinite animation */
+}
+
+.marquee-images span {
+  width: 100px; /* Set a fixed width for the images */
+  margin-right: 20px; /* Add space between images */
+  vertical-align: middle;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%); /* Start off-screen right */
+  }
+  100% {
+    transform: translateX(-100%); /* Move completely to off-screen left */
+  }
+}
+
     </style>
 
 </head>
 
 <body>
+
+
+    <div class="marquee">
+        <div class="marquee-images">
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+        </div>
+      </div>
+
+
             <div class="container-Organic-Milk">
             	<h1>jhfaksdhahd;s</h1>
                 <div class="box-organic-milk">
